// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator AllPages should match the snapshot 1`] = `
<div>
  <div
    class="calcmain"
  >
    <h2>
      Let's do some math!
    </h2>
    <div
      class="calcborder"
    >
      <div
        class="clcBckgrnd"
      >
        <div
          class="clcScrn"
        >
          0
        </div>
        <div
          class="btnsPad"
        >
          <button
            class="num btn"
            type="button"
          >
            AC
          </button>
          <button
            class="num btn"
            type="button"
          >
            +/-
          </button>
          <button
            class="num btn"
            type="button"
          >
            %
          </button>
          <button
            class="btn2 btn"
            type="button"
          >
            ÷
          </button>
          <button
            class="num btn"
            type="button"
          >
            7
          </button>
          <button
            class="num btn"
            type="button"
          >
            8
          </button>
          <button
            class="num btn"
            type="button"
          >
            9
          </button>
          <button
            class="btn2 btn"
            type="button"
          >
            x
          </button>
          <button
            class="num btn"
            type="button"
          >
            4
          </button>
          <button
            class="num btn"
            type="button"
          >
            5
          </button>
          <button
            class="num btn"
            type="button"
          >
            6
          </button>
          <button
            class="btn2 btn"
            type="button"
          >
            -
          </button>
          <button
            class="num btn"
            type="button"
          >
            1
          </button>
          <button
            class="num btn"
            type="button"
          >
            2
          </button>
          <button
            class="num btn"
            type="button"
          >
            3
          </button>
          <button
            class="btn2 btn"
            type="button"
          >
            +
          </button>
          <button
            class="zero btn"
            type="button"
          >
            0
          </button>
          <button
            class="num btn"
            type="button"
          >
            .
          </button>
          <button
            class="btn2 btn"
            type="button"
          >
            =
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home AllPages should match the snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <h1>
      Welcom to our page
    </h1>
    <p>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, alias. Recusandae labore architecto aspernatur ipsa asperiores, placeat aperiam odio praesentium, exercitationem, temporibus et dolorem repellat molestias sint reiciendis voluptatibus. Autem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, alias. Recusandae labore architecto aspernatur ipsa asperiores, placeat aperiam odio praesentium, exercitationem, temporibus et dolorem repellat molestias sint reiciendis voluptatibus. Autem?
    </p>
    <p>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, alias. Recusandae labore architecto aspernatur ipsa asperiores, placeat aperiam odio praesentium, exercitationem, temporibus et dolorem repellat molestias sint reiciendis voluptatibus. Autem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, alias. Recusandae labore architecto aspernatur ipsa asperiores, placeat aperiam odio praesentium, exercitationem, temporibus et dolorem repellat molestias sint reiciendis voluptatibus. Autem?
    </p>
  </div>
</div>
`;

exports[`Quote AllPages should match the snapshot 1`] = `
<div>
  <div
    class="Container"
  >
    <p
      class="loading"
    >
      Loading ...
    </p>
  </div>
</div>
`;
